<resources>
    <string name="app_name">Music Project</string>

    <!--    common and generic -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="playlist">Playlist</string>
    <string name="view_all">View All</string>
    <string name="share">Share</string>
    <string name="now_playing">Now Playing</string>

    <!--    Splash screen-->
    <string name="muzic">Muzic</string>

    <!--    Home screen-->
    <string name="hot_recommended">Hot Recommended</string>
    <string name="recently_played">Recently Played</string>
    <string name="search_album_song">Search album song</string>

    <!--    Navigation view-->
    <string name="themes">Themes</string>
    <string name="ringtone_cutter">Ringtone Cutter</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="equliser">Equliser</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="hidden_folders">Hidden Folders</string>
    <string name="scan_media">Scan Media</string>
    <string name="_87">87</string>
    <string name="_52">52</string>
    <string name="_238">238</string>

    <!--    Song screen-->
    <string name="all_song">All Songs</string>
    <string name="genres">Genres</string>
    <string name="my_top_tracks">My Top Tracks</string>
    <string name="latest_added">Latest Added</string>
    <string name="history">History</string>
    <string name="favourites">Favourites</string>

    <!--    popup menu-->
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="add_to_playing_queue">Add to playing queue</string>
    <string name="add_to_playlist...">Add to playlist…</string>
    <string name="rename">Rename</string>
    <string name="tag_editor">Tag editor</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="delete_from_device">Delete from device</string>


    <!--    Album detail screen-->
    <string name="album_detail">Album Details</string>
    <string name="add_to_favorites">Add to Favorites</string>

    <!--    Artist detail screen-->
    <string name="artist_detail">Artist Detail</string>
    <string name="follow">Follow</string>

    <!--    Settings screen-->
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="headset">Headset</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="advanced">Advanced</string>
    <string name="other">Other</string>

    <!--    for menu search  -->
    <string name="search">search</string>

    <!--  for menu music playing fragment   -->
    <string name="social_share_fragment">Social Share Fragment</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="lyrics">Lyric</string>
    <string name="volume">Volume</string>
    <string name="details">Details</string>
    <string name="equaliser">Equliser</string>
    <string name="player_theme">Player theme</string>

    <!--    now playing fragment-->
    <string name="eq">EQ</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>

    <!--    adding my playlist fragment-->
    <string name="my_playlist">My Playlist</string>
    <string name="enter_your_playlist_name">Enter your playlist name</string>
    <string name="adding_my_playlist">Adding My Playlist</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_my_playlist">Add My Playlist</string>
    <string name="add_playlist_avatar">Add playlist avatar:</string>
    <string name="enter_playlist_name">Enter playlist name:</string>
    <string name="choose_songs_for_my_playlist">Choose songs for my playlist:</string>

    <!--    ArtistDetainFragmentXML-->
    <string name="dilon_bruce">Dilon Bruce</string>
    <string name="pop_rock_funk_pop_heavy_metal">Pop rock, Funk pop, Heavy Metal</string>
    <string name="numberOfFollwers">4,367</string>
    <string name="follwers">Follwers</string>
    <string name="numberOfListners">128,980</string>
    <string name="listener">Listner</string>
    <string name="top_albums">Top Albums</string>
    <string name="top_songs">Top Songs</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example">Example …</string>
    <string name="h_example">3:15</string>

    <!--    Sleep Timer-->
    <string-array name="minute_array">
        <item>10 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
    </string-array>


</resources>