<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/socialShareFragment"
        android:title="@string/social_share_fragment" />
    <item
        android:id="@+id/playing_queue"
        android:title="@string/playing_queue" />
    <item
        android:id="@+id/add_to_playlist"
        android:title="@string/add_to_playlist..." />
    <item
        android:id="@+id/lyric"
        android:title="@string/lyrics" />
    <item
        android:id="@+id/volume"
        android:title="@string/volume" />
    <item
        android:id="@+id/details"
        android:title="@string/details" />
    <item
        android:id="@+id/sleep_timer"
        android:title="@string/sleep_timer" />
    <item
        android:id="@+id/equaliser"
        android:title="@string/equaliser" />
    <item
        android:id="@+id/ringtone_cutter"
        android:title="@string/ringtone_cutter" />
    <item
        android:id="@+id/player_theme"
        android:title="@string/player_theme" />


</menu>