<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adding_playlist_dialog_background_color"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/toolbar_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/add_my_playlist" />


    <TextView
        android:id="@+id/textView7"
        style="@style/part_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/below_medium_dimens"
        android:layout_marginTop="@dimen/below_large_dimens"
        android:layout_marginEnd="@dimen/below_medium_dimens"
        android:text="@string/add_playlist_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:layout_width="@dimen/playlist_avatar_adding_playlist_dimens"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/small_dimens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:src="@drawable/ic_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_dimens"
        android:layout_marginTop="@dimen/medium_dimens"
        android:layout_marginEnd="@dimen/medium_dimens"
        android:hint="@string/enter_your_playlist_name"
        android:textColorHint="@color/white1_text_color"
        app:boxStrokeColor="@color/white1_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        style="@style/btn_cancel_adding_playlist_dialog_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="413dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtPlaylistName"
        style="@style/edt_adding_playlist_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="520dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="@style/btn_add_adding_playlist_dialog_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="565dp" />

</androidx.constraintlayout.widget.ConstraintLayout>